@@ -65,8 +65,8 @@
 
 void clean_filename(sqlite3_context* context, int argc, sqlite3_value** argv);
 void decode_channel_id(sqlite3_context* context, int argc, sqlite3_value** argv);
-bool discover_devices_broadcast(sqlite3* instance, bool excludestorage);
-bool discover_devices_http(sqlite3* instance, bool excludestorage);
+bool discover_devices_broadcast(sqlite3* instance);
+bool discover_devices_http(sqlite3* instance);
 void encode_channel_id(sqlite3_context* context, int argc, sqlite3_value** argv);
 int epg_bestindex(sqlite3_vtab* vtab, sqlite3_index_info* info);
 int epg_close(sqlite3_vtab_cursor* cursor);
@@ -632,12 +632,11 @@ void delete_recordingrule(sqlite3* instance, unsigned int recordingruleid)
 //
 //	instance		- SQLite database instance
 //	usebroadcast	- Flag to use broadcast rather than HTTP discovery
-//	excludestorage	- Flag to exclude storage devices from discovery
 
-void discover_devices(sqlite3* instance, bool usebroadcast, bool excludestorage)
+void discover_devices(sqlite3* instance, bool usebroadcast)
 {
 	bool ignored;
-	return discover_devices(instance, usebroadcast, excludestorage, ignored);
+	return discover_devices(instance, usebroadcast, ignored);
 }
 
 //---------------------------------------------------------------------------
@@ -649,10 +648,9 @@ void discover_devices(sqlite3* instance, bool usebroadcast, bool excludestorage)
 //
 //	instance		- SQLite database instance
 //	usebroadcast	- Flag to use broadcast rather than HTTP discovery
-//	excludestorage	- Flag to exclude storage devices from discovery
 //	changed			- Flag indicating if the data has changed
 
-void discover_devices(sqlite3* instance, bool usebroadcast, bool excludestorage, bool& changed)
+void discover_devices(sqlite3* instance, bool usebroadcast, bool& changed)
 {
 	bool			hastuners = false;			// Flag indicating if any tuners were detected
 
@@ -668,7 +666,7 @@ void discover_devices(sqlite3* instance, bool usebroadcast, bool excludestorage,
 
 		// The logic required to load the temp table from broadcast differs greatly from the method
 		// used to load from the HTTP API; the specific mechanisms have been broken out into helpers
-		hastuners = (usebroadcast) ? discover_devices_broadcast(instance, excludestorage) : discover_devices_http(instance, excludestorage);
+		hastuners = (usebroadcast) ? discover_devices_broadcast(instance) : discover_devices_http(instance);
 
 		// If no tuner devices were found during discovery, throw an exception to abort the device discovery.
 		// The intention here is to prevent transient discovery problems from clearing out the existing devices
@@ -714,9 +712,8 @@ void discover_devices(sqlite3* instance, bool usebroadcast, bool excludestorage,
 // Arguments:
 //
 //	instance		- SQLite database instance
-//	excludestorage	- Flag to exclude storage devices from discovery
 
-bool discover_devices_broadcast(sqlite3* instance, bool excludestorage)
+bool discover_devices_broadcast(sqlite3* instance)
 {
 	bool					hastuners = false;		// Flag indicating tuners were found
 	sqlite3_stmt*			statement;				// SQL statement to execute
@@ -738,9 +735,6 @@ bool discover_devices_broadcast(sqlite3* instance, bool excludestorage)
 			// The presence or lack of tuner devices is used as the function return value
 			if(device.devicetype == device_type::tuner) hastuners = true;
 
-			// If the flag to exclude storage devices has been set, ignore them
-			if((excludestorage) && (device.devicetype == device_type::storage)) return;
-			
 			// Bind the query parameter(s)
 			result = sqlite3_bind_int(statement, 1, device.deviceid);
 			if(result == SQLITE_OK) result = sqlite3_bind_text(statement, 2, (device.devicetype == device_type::tuner) ? "tuner" : "storage", -1, SQLITE_STATIC);
@@ -784,9 +778,8 @@ bool discover_devices_broadcast(sqlite3* instance, bool excludestorage)
 // Arguments:
 //
 //	instance		- SQLite database instance
-//	excludestorage	- Flag to exclude storage devices from discovery
 
-bool discover_devices_http(sqlite3* instance, bool excludestorage)
+bool discover_devices_http(sqlite3* instance)
 {
 	sqlite3_stmt*				statement;				// Database query statement
 	int							tuners = 0;				// Number of tuners found
@@ -809,11 +802,7 @@ bool discover_devices_http(sqlite3* instance, bool excludestorage)
 		"case when json_type(discovery.value, '$.DeviceID') is not null then 'tuner' when json_type(discovery.value, '$.StorageID') is not null then 'storage' else 'unknown' end as type, "
 		"null as dvrauthorized, "
 		"http_request(json_extract(discovery.value, '$.DiscoverURL'), null) as data from json_each(http_request('http://api.hdhomerun.com/discover')) as discovery");
-	
-	// Given that this is a multi-step operation, it's easier to use a different query altogether to exclude storage devices from discover_device
-	if(!excludestorage) execute_non_query(instance, "insert into discover_device select deviceid, type, dvrauthorized, data from discover_device_http where data is not null and json_extract(data, '$.Legacy') is null");
-	else execute_non_query(instance, "insert into discover_device select deviceid, type, dvrauthorized, data from discover_device_http where data is not null and json_extract(data, '$.StorageID') is null and json_extract(data, '$.Legacy') is null");
-
+	execute_non_query(instance, "insert into discover_device select deviceid, type, dvrauthorized, data from discover_device_http where data is not null and json_extract(data, '$.Legacy') is null");
 	execute_non_query(instance, "drop table discover_device_http");
 
 	// Update the DVR service authorization flag for each discovered tuner device
